...
            underlayColor: "#555"
        };

        return (
            <View style={[styles.container, isNotched() ? styles.containerNotched : null]}>
                <View style={styles.titleBar}>
                    <Text style={styles.title}>BRCA Exchange</Text>
                </View>

                <View style={{flex: 1}}>
                    <SidebarMenuItems
                        onNavigateRequest={this.navigateTo}
                        buttonStyle={styles.button}
...
