...
        buttonStyle: PropTypes.object.isRequired,
        onNavigateRequest: PropTypes.func.isRequired
    };

    render() {
        return (
            <ScrollView style={{flex: 1}} testID="navbar-holder">
                <Icon.Button name="home" testID="nav-home" {...this.props.navbuttonProps}
                    onPress={ () => this.props.onNavigateRequest('Home', 'brca.HomeScreen', true) }>
                    <Text style={this.props.buttonStyle}>Home</Text>
                </Icon.Button>

                <Icon.Button name="search" testID="nav-search" {...this.props.navbuttonProps}
...
