...
                            <TouchableOpacity style={[styles.modalButton, styles.exitModalButton]} onPress={() => this.props.onDisagreeWithLicense()}>
                                <Text style={[styles.modalButtonText, styles.exitModalButtonText]}>Exit</Text>
                            </TouchableOpacity>
                        )
                    }

                    <TouchableOpacity style={[styles.modalButton, styles.closeModalButton]} testID="disclaimer-agree" onPress={() => this.props.onDismissLicense()}>
                        <Text style={[styles.modalButtonText, styles.closeModalButtonText]}>I Agree</Text>
                    </TouchableOpacity>
                </View>
            </LightboxModal>
        )
    }
...
